--- a/s/webrtc-capturestill/index.html
+++ b/s/webrtc-capturestill/index.html
@@ -21,12 +21,15 @@
   </div>
   <canvas id="canvas">
   </canvas>
+  <br>
   <div class="output">
-    <img id="photo" alt="The screen capture will appear in this box."> 
+    <img id="photo" alt="The screen capture will appear in this box.">
+	<img src="circle.png" width="320" height="240">
   </div>
 	<p>
 		Visit our article <a href="https://developer.mozilla.org/en-US/docs/Web/API/WebRTC_API/Taking_still_photos"> Taking still photos with WebRTC</a> to learn more about the technologies used here.
 	</p>
 </div>
+
 </body>
 </html>
